# moto-s3-log-policy-w-prefix

./: Makefile  README.md  pyproject.toml  test.py
.github/workflows/: test.yml
