[tool.poetry]
name = "moto-s3-log-policy-w-prefix"
version = "0.1.0"
description = ""
authors = ["Douglas Naphas <douglasnaphas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
moto = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
